# airflow-demos

./: context_ag.py  dag_var_1_0_0.py  dag_var_1_0_1.py  group_dag.py  ml_dag.py  my_bash_dag.py  my_dag.py  my_python_dag.py  prallel_dag.py  pyproject.toml  ssh.py  user_processing.py  xcom_dag.py
scripts/: command.sh
